FIX: rename bootstrap4-accessable -> bootstrap4-accessible, change bootstrap4-dark pre style to be more visible.

--- a/bootstrap4-dark/static/css/master.css
+++ b/bootstrap4-dark/static/css/master.css
@@ -58,8 +58,13 @@ span.label {
     display: inline-block;
 }
 
-.page-item.disabled .page-link, .page-link {
+.list-group-item, .page-item.disabled .page-link, .page-link {
     background-color: #131313;
     border: 1px solid black;
 }
 
+pre {
+    color: #e83e8c;
+    background-color: #131313;
+    border: 1px solid black;
+}
